--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-image": "^2.2.1",
-    "react-scripts": "3.2.0"
+    "react-image-holder": "^2.0.1",
+    "react-infinite-scroll-component": "^4.5.3",
+    "react-infinite-scroller": "^1.2.4",
+    "react-scripts": "3.2.0",
+    "react-simple-infinite-scroll": "0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
