--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.10.2",
     "react-image": "^2.2.1",
     "react-image-holder": "^2.0.1",
+    "react-image-layout": "^1.0.0",
     "react-infinite-scroll-component": "^4.5.3",
     "react-infinite-scroller": "^1.2.4",
     "react-scripts": "3.2.0",
